fix(style) .fm: scrolling on ios

--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,7 @@ a:hover, a:active {
     margin: 0;
     overflow-y: auto;
     list-style-type: none;
+    -webkit-overflow-scrolling: touch;
 }
 
 .files li {
